fix z-index issue

--- a/app/less/_common.less
+++ b/app/less/_common.less
@@ -99,7 +99,7 @@ html, body {
     }
     .card-drawer {
       position: relative;
-      //z-index:5;
+      z-index:5;
       -webkit-animation:2.5s slideInDown  ease;
       animation:2.5s slideInDown  ease;
       /* when showing the thing */
@@ -113,7 +113,7 @@ html, body {
         border-radius: 0px 0px 25px 25px;
         padding: 5%;
         position: relative;
-        //z-index:5;
+        z-index:5;
         box-shadow: @main-shadow;
 
         @media @tablet-screen, @mobile-screen { padding-bottom: 30%; }
@@ -166,7 +166,7 @@ html, body {
 
     .mainBody {
       position: relative;
-      //z-index:5;
+      z-index:5;
     }
 
     .card-theme {
